[gd_scene load_steps=7 format=2]

[ext_resource path="res://title_screen/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://title_screen/sprites/menu_background.png" type="Texture" id=2]
[ext_resource path="res://title_screen/fonts/font.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 0.3125, 0.401786 )
texture = ExtResource( 2 )
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 280.0
margin_bottom = 160.0

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 260.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.552941, 0.596078, 0.0392157, 1 )
text = "Revenge on Zorgoth"
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 260.0
margin_bottom = 140.0

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 156.0
margin_bottom = 86.0
custom_constants/separation = 10

[node name="NewGame" type="Button" parent="VBoxContainer/HBoxContainer/Buttons"]
margin_right = 156.0
margin_bottom = 22.0
custom_styles/focus = SubResource( 1 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.552941, 0.596078, 0.0392157, 1 )
custom_colors/font_color_hover = Color( 0.286275, 0.27451, 0.27451, 1 )
text = "New Game"
flat = true
align = 0

[node name="Continue" type="Button" parent="VBoxContainer/HBoxContainer/Buttons"]
margin_top = 32.0
margin_right = 156.0
margin_bottom = 54.0
custom_styles/focus = SubResource( 2 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.552941, 0.596078, 0.0392157, 1 )
custom_colors/font_color_hover = Color( 0.286275, 0.27451, 0.27451, 1 )
text = "Continue"
flat = true
align = 0

[node name="ExitGame" type="Button" parent="VBoxContainer/HBoxContainer/Buttons"]
margin_top = 64.0
margin_right = 156.0
margin_bottom = 86.0
custom_styles/focus = SubResource( 3 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.552941, 0.596078, 0.0392157, 1 )
custom_colors/font_color_hover = Color( 0.286275, 0.27451, 0.27451, 1 )
text = "Exit Game"
flat = true
align = 0
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Buttons/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Buttons/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Buttons/ExitGame" to="." method="_on_ExitGame_pressed"]
